--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.0.M3'
+        springBootVersion = '2.0.0.M7'
     }
     repositories {
         mavenCentral()
@@ -16,6 +16,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -31,10 +32,11 @@ repositories {
 dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     compile('mysql:mysql-connector-java')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
