--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
-    compile('mysql:mysql-connector-java')
-//    compile('org.postgresql:postgresql')
+//    compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
