--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,15 @@ dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
-//    compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
+//    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 //    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+
+    //Swagger
+    compile('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
 }
