--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile('mysql:mysql-connector-java')
 //    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile ('org.springframework.boot:spring-boot-starter-mail:2.0.0.RELEASE')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
