--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 //    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile ('org.springframework.boot:spring-boot-starter-mail:2.0.0.RELEASE')
+    compile('com.google.code.gson:gson:2.8.2')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
