--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.0.M7'
+        springBootVersion = '2.0.0.M6'
     }
     repositories {
         mavenCentral()
@@ -38,8 +38,11 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile ('org.springframework.boot:spring-boot-starter-mail:2.0.0.RELEASE')
     compile('com.google.code.gson:gson:2.8.2')
+    compile ('org.springframework.boot:spring-boot-starter-actuator')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+
 
 //    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
