--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile ('org.springframework.boot:spring-boot-starter-mail:2.0.0.RELEASE')
     compile('com.google.code.gson:gson:2.8.2')
     compile ('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
