--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 
     compile('org.springframework.boot:spring-boot-starter-web')
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
-//    compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
+//    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile ('org.springframework.boot:spring-boot-starter-mail:2.0.0.RELEASE')
     compile('com.google.code.gson:gson:2.8.2')
@@ -46,7 +46,7 @@ dependencies {
 
 
 
-//    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
     //Swagger
     compile('io.springfox:springfox-swagger2:2.7.0')
